--- a/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProphetsWay.Utilities\ProphetsWay.Utilities.csproj">
+      <Private>true</Private>
+    </ProjectReference>
+  </ItemGroup>
+
 </Project>
