made the base entity serializable

--- a/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProphetsWay.Utilities\ProphetsWay.Utilities.csproj">
       <Private>true</Private>
     </ProjectReference>
