--- a/ProphetsWay.BaseDataAccess.Tests/ProphetsWay.BaseDataAccess.Tests.csproj
+++ b/ProphetsWay.BaseDataAccess.Tests/ProphetsWay.BaseDataAccess.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net461</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
