added .net framework 4.8 and net core3.1 to the list of supported frameworks

--- a/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net40;net45;net451;net452;net46;net461;net471;netstandard2.0;netstandard2.1;netcoreapp2.2;netcoreapp2.1;netcoreapp2.0;netcoreapp3.0;</TargetFrameworks>
+		<TargetFrameworks>net40;net45;net451;net452;net46;net461;net471;net48;netstandard2.0;netstandard2.1;netcoreapp2.2;netcoreapp2.1;netcoreapp2.0;netcoreapp3.0;netcoreapp3.1;</TargetFrameworks>
 		<RootNamespace>ProphetsWay.BaseDataAccess</RootNamespace>
 		<AssemblyName>ProphetsWay.BaseDataAccess</AssemblyName>
 		<ApplicationIcon />
@@ -18,27 +18,27 @@ This can be used with any implementation of a DAL that you like, and allows for 
 Go to https://github.com/ProphetManX/ProphetsWay.BaseDataAccess for more information.
 		</Description>
 
-    <!-- Assembly Override Properties -->
-    <PackageRequireLicenseAcceptance />
-    <PackageId />
-    <Version />
-    <Authors />
-    <Company />
-    <Product />
+		<!-- Assembly Override Properties -->
+		<PackageRequireLicenseAcceptance />
+		<PackageId />
+		<Version />
+		<Authors />
+		<Company />
+		<Product />
 
-    <Copyright />
-    <PackageLicenseUrl />
-    <PackageProjectUrl />
-    <PackageIconUrl />
-    <RepositoryUrl />
-    <RepositoryType />
-    <PackageTags />
-    <PackageReleaseNotes />
-    <NeutralLanguage />
-    <AssemblyVersion />
-    <FileVersion />
-    <InformationalVersion />
-    
+		<Copyright />
+		<PackageLicenseUrl />
+		<PackageProjectUrl />
+		<PackageIconUrl />
+		<RepositoryUrl />
+		<RepositoryType />
+		<PackageTags />
+		<PackageReleaseNotes />
+		<NeutralLanguage />
+		<AssemblyVersion />
+		<FileVersion />
+		<InformationalVersion />
+	
 	</PropertyGroup>
 
 </Project>
