trying to get the submodules to pull down with the build/test pipeline

--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -2,6 +2,8 @@ parameters:
   vmImage: 'windows-latest'
 
 steps:
+- checkout: self
+  submodules: true
 - task: DotNetCoreCLI@2
   displayName: 'Build Solution'
   inputs:
