--- a/build-test-deploy-release.yml
+++ b/build-test-deploy-release.yml
@@ -17,6 +17,9 @@ stages:
         vmImage: ${{parameters.vmImage}}
       
       steps:
+      - checkout: self
+        submodules: true
+
       - template: build-and-test.yml
         parameters:
           vmImage: ${{parameters.vmImage}}
@@ -34,6 +37,9 @@ stages:
         vmImage: ${{parameters.vmImage}}
 
       steps:
+      - checkout: self
+        submodules: true
+
       - task: Assembly-Info-NetCore@2
         displayName: 'Set Assembly Info'
         inputs:
