trying to set the service endpoint name

--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -13,6 +13,7 @@ resources:
     - repository: pp
       type: github
       name: 'ProphetManX/prophets-pipelines'
+      endpoint: ${{ variables.GitHubConnectionName }}
 
 name: $(SemanticVersion).$(Build.BuildId)
 
