trying to wrap it

--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -13,7 +13,7 @@ resources:
     - repository: pp
       type: github
       name: 'ProphetManX/prophets-pipelines'
-      endpoint: ${{ variables.GitHubConnectionName }}
+      endpoint: '${{ variables.GitHubConnectionName }}'
 
 name: $(SemanticVersion).$(Build.BuildId)
 
