--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -13,7 +13,7 @@ resources:
     - repository: pp
       type: github
       name: 'ProphetManX/prophets-pipelines'
-      endpoint: '${{ variables.GitHubConnectionName }}'
+      endpoint: 'ProphetsWay@GitHub'
 
 name: $(SemanticVersion).$(Build.BuildId)
 
@@ -35,7 +35,6 @@ parameters:
   displayName: 'VM Image Name'
   type: string
   default: 'windows-latest'
-
 
 
 variables:
