--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -39,7 +39,7 @@ parameters:
 
 variables:
 - template: '${{ parameters.LocalVariables }}'
-- template: 'variables/version.yml@pp'
+- template: 'variables/versions.yml@pp'
 
 stages:
 - template: 'stages/prophets-pipeline.yml@pp'
