--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -15,7 +15,7 @@ resources:
       name: 'ProphetManX/prophets-pipelines'
       endpoint: 'ProphetsWay@GitHub'
 
-name: $(SemanticVersion).$(Build.BuildId)
+name: $(Major).$(Minor).$(Patch).$(Build.BuildId)
 
 parameters:
 - name: LocalVariables
