--- a/stages/pull-request.yml
+++ b/stages/pull-request.yml
@@ -23,7 +23,7 @@ stages:
     displayName: 'Build and Run Unit Tests'
     
     variables:
-    - template: '${{ parameters.LocalVariables }}'
+    - template: '../${{ parameters.LocalVariables }}'
     
     pool:
       ${{ if eq( parameters.PoolType, 'VM' )}}:
