trying more things

--- a/build-test-deploy-release.yml
+++ b/build-test-deploy-release.yml
@@ -30,6 +30,7 @@ stages:
     condition: ne(variables['Build.Reason'], 'PullRequest')
     dependsOn: []
     variables:
+    - template: app-variables.yml
     - template: version-variables.yml
 
     jobs:
