got them both to break

--- a/build-test-deploy-release.yml
+++ b/build-test-deploy-release.yml
@@ -31,7 +31,7 @@ stages:
     dependsOn: []
     variables:
     - template: app-variables.yml
-    - template: version-variables.yml
+    - template: variables/versions.yml
 
     jobs:
     - job: CiBuild
