trying to get it to work again

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,10 @@ pr:
     - '*'
 
 
-#variables:
-#  MajorVersion: '2'
-#  MinorVersion: '1'
-#  PatchVersion: '0'
+variables:
+  MajorVersion: '2'
+  MinorVersion: '1'
+  PatchVersion: '0'
 
 
 stages:
