--- a/app-variables.yml
+++ b/app-variables.yml
@@ -1,8 +1,8 @@
 variables:
   #user must update these each build personally as new versions are being worked on
-  Major: '2'
-  Minor: '1'
-  Patch: '1'
+  MajorVersion: '2'
+  MinorVersion: '1'
+  PatchVersion: '1'
 
   # set these once and forget them per project/repo 
   TargetProject: '**/ProphetsWay.BaseDataAccess.csproj'
