--- a/stages/ci-build.yml
+++ b/stages/ci-build.yml
@@ -19,7 +19,7 @@ stages:
   dependsOn: []
   variables:
   - template: '../${{ parameters.LocalVariables }}'
-  - template: '../version-variables.yml
+  - template: '../version-variables.yml'
 
   jobs:
   - job: BuildAndPackage
