--- a/stages/ci-build.yml
+++ b/stages/ci-build.yml
@@ -18,7 +18,7 @@ stages:
   condition: ne(variables['Build.Reason'], 'PullRequest')
   dependsOn: []
   variables:
-  - template: '../${{ parameters.LocalVariables }}'
+  #- template: '../${{ parameters.LocalVariables }}'
   - template: '../version-variables.yml'
 
   jobs:
