--- a/stages/ci-build.yml
+++ b/stages/ci-build.yml
@@ -1,15 +1,20 @@
-parameters:
-- name: PoolType
-  type: string
-  values:
-    - 'VM'
-    - 'Pool'
+#parameters:
+#- name: PoolType
+#  type: string
+#  values:
+#    - 'VM'
+#    - 'Pool'
   
-- name: PoolName
-  type: string
+#- name: PoolName
+#  type: string
 
-- name: LocalVariables
-  type: string
+#- name: LocalVariables
+#  type: string
+
+parameters:
+  PoolType: ''
+  PoolName: ''
+  LocalVariables: ''
 
 
 stages:
