--- a/steps/restore-build-test.yml
+++ b/steps/restore-build-test.yml
@@ -8,7 +8,14 @@ steps:
   inputs:
     command: 'build'
     #projects: ${{ parameters.TargetProject }}
-    projects: '**\ProphetsWay.BaseDataAccess.sln'
+    projects: '**\ProphetsWay.BaseDataAccess.csproj'
+    
+- task: DotNetCoreCLI@2
+  displayName: 'Build Solution'
+  inputs:
+    command: 'build'
+    #projects: ${{ parameters.TargetProject }}
+    projects: '**\ProphetsWay.Example.sln'
     
 - task: VSTest@2
   displayName: 'Run Unit Tests'
