--- a/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
@@ -5,7 +5,7 @@
 			net40;net45;net451;net452;net46;net461;net471;net48;
 			netstandard2.0;netstandard2.1;
 			netcoreapp2.1;netcoreapp3.1;
-			net50;
+			net50;net60;
 		</TargetFrameworks>
 		<RootNamespace>ProphetsWay.BaseDataAccess</RootNamespace>
 		<AssemblyName>ProphetsWay.BaseDataAccess</AssemblyName>
