added an endpoint to the github repository reference

--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -13,6 +13,7 @@ resources:
     - repository: pp
       type: github
       name: 'ProphetManX/prophets-pipelines'
+      endpoint: https://github.com/ProphetManX/prophets-pipelines.git
 
 name: $(SemanticVersion).$(Build.BuildId)
 
