trying another endoint connection

--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -13,7 +13,7 @@ resources:
     - repository: pp
       type: github
       name: 'ProphetManX/prophets-pipelines'
-      endpoint: https://github.com/ProphetManX/prophets-pipelines.git
+      endpoint: ProphetsWay@GitHub
 
 name: $(SemanticVersion).$(Build.BuildId)
 
