updated localpipeline with new parameter

--- a/local-pipeline.yml
+++ b/local-pipeline.yml
@@ -53,4 +53,4 @@ stages:
     PoolType: ${{ parameters.PoolType }}
     PoolName: ${{ parameters.PoolName }}
     LocalVariables: ${{ parameters.LocalVariables }}
-
+    PostTargetToNuGet: ${{ variables.PostTargetToNuGet }}
