--- a/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
@@ -39,7 +39,7 @@ Go to https://github.com/ProphetManX/ProphetsWay.BaseDataAccess for more informa
 		<RepositoryUrl />
 		<RepositoryType />
 		<PackageTags />
-		<PackageReleaseNotes />
+		<PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
 		<NeutralLanguage />
 		<AssemblyVersion />
 		<FileVersion />
