--- a/app-variables.yml
+++ b/app-variables.yml
@@ -9,5 +9,6 @@ variables:
   PostTargetToNuGet: 'yes'  #can be empty or ignored if unnecessary, but if "yes" then pipeline will build alpha, beta, and semantic NuGet release packages
   TargetProject: '**/ProphetsWay.BaseDataAccess.csproj'
   Product: 'BaseDataAccess'
+  RepoName: 'ProphetManX/ProphetsWay.BaseDataAccess'
   NuGetFeedCredentialName: 'ProphetManX''s NuGet'
   GitHubConnectionName: 'ProphetsWay@GitHub'
