Prophet/pipeline tuning (#23)
* updated project properties

* made more project properties on the actual csproj instead of in app-variables, no need to put them somewhere else to only be overwritten when i can put them directly where they should be to begin with

* gotta keep product in there for the pipeline

* needed repo name as well

--- a/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
+++ b/ProphetsWay.BaseDataAccess/ProphetsWay.BaseDataAccess.csproj
@@ -7,8 +7,14 @@
 			netcoreapp2.1;netcoreapp3.1;
 			net50;net60;
 		</TargetFrameworks>
+		<Authors>G. Gordon Nasseri</Authors>
+		<Company>Prophet's Way</Company>
+		<Product>BaseDataAccess</Product>
 		<RootNamespace>ProphetsWay.BaseDataAccess</RootNamespace>
 		<AssemblyName>ProphetsWay.BaseDataAccess</AssemblyName>
+		<PackageId>ProphetsWay.BaseDataAccess</PackageId>
+		<RepositoryType>GitHub</RepositoryType>
+		<RepositoryUrl>https://github.com/ProphetManX/ProphetsWay.BaseDataAccess</RepositoryUrl>
 		<ApplicationIcon />
 		<Win32Resource />
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -17,6 +23,8 @@
 		<Company>ProphetsWay</Company>
 		<PackageIcon>profile.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<Description>
 A group of interfaces to define any/all interactions required for a Data Access Layer (DAL).  
 
@@ -26,20 +34,13 @@ Go to https://github.com/ProphetManX/ProphetsWay.BaseDataAccess for more informa
 		</Description>
 
 		<!-- Assembly Override Properties -->
-		<PackageRequireLicenseAcceptance />
-		<PackageId />
+		
 		<Version />
-		<Authors />
-		<Company />
-		<Product />
 
 		<Copyright />
-		<PackageLicenseUrl />
 		<PackageProjectUrl />
-		<RepositoryUrl />
-		<RepositoryType />
 		<PackageTags />
-		<PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+		<PackageReleaseNotes />
 		<NeutralLanguage />
 		<AssemblyVersion />
 		<FileVersion />
@@ -50,7 +51,7 @@ Go to https://github.com/ProphetManX/ProphetsWay.BaseDataAccess for more informa
 	<ItemGroup>
 		<None Include="..\CHANGELOG.md" Link="CHANGELOG.md" Pack="true" PackagePath="" />
 		<None Include="..\README.md" Link="README.md" Pack="true" PackagePath="" />
-		<None Include="profile.png" Pack="true" PackagePath="" />
+		<Content Include="..\profile.png" Link="profile.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
